; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/netronome/nfp/extr_nfp_devlink.c_nfp_devlink_sb_pool_get.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/netronome/nfp/extr_nfp_devlink.c_nfp_devlink_sb_pool_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.devlink = type { i32 }
%struct.devlink_sb_pool_info = type { i32 }
%struct.nfp_pf = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.devlink*, i32, i32, %struct.devlink_sb_pool_info*)* @nfp_devlink_sb_pool_get to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nfp_devlink_sb_pool_get(%struct.devlink* %0, i32 %1, i32 %2, %struct.devlink_sb_pool_info* %3) #0 {
  %5 = alloca %struct.devlink*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.devlink_sb_pool_info*, align 8
  %9 = alloca %struct.nfp_pf*, align 8
  store %struct.devlink* %0, %struct.devlink** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store %struct.devlink_sb_pool_info* %3, %struct.devlink_sb_pool_info** %8, align 8
  %10 = load %struct.devlink*, %struct.devlink** %5, align 8
  %11 = call %struct.nfp_pf* @devlink_priv(%struct.devlink* %10)
  store %struct.nfp_pf* %11, %struct.nfp_pf** %9, align 8
  %12 = load %struct.nfp_pf*, %struct.nfp_pf** %9, align 8
  %13 = load i32, i32* %6, align 4
  %14 = load i32, i32* %7, align 4
  %15 = load %struct.devlink_sb_pool_info*, %struct.devlink_sb_pool_info** %8, align 8
  %16 = call i32 @nfp_shared_buf_pool_get(%struct.nfp_pf* %12, i32 %13, i32 %14, %struct.devlink_sb_pool_info* %15)
  ret i32 %16
}

declare dso_local %struct.nfp_pf* @devlink_priv(%struct.devlink*) #1

declare dso_local i32 @nfp_shared_buf_pool_get(%struct.nfp_pf*, i32, i32, %struct.devlink_sb_pool_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
